[package]
name = "mulay-gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
gl = "0.14.0"
imgui = "0.11.0"
egui_sdl2_gl = { git = "https://github.com/seanballais/egui_sdl2_gl.git", branch = "feature/egui-upgrade" }
notify = "6.0.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[workspace]
members = ["tools"]
